# genai-basics-2026

./: .env.example  .gitignore  README.md  wrd.md
00-hello-world/: README.md  main.py  pyproject.toml
00-hello-world-done/: README.md  main.py  pyproject.toml
01-research-engine/: README.md  chat_documents.py  ingest_pdf.py  pyproject.toml
01-research-engine-done/: README.md  chat_documents.py  ingest_pdf.py  pyproject.toml
02-data-connector-mcp/: README.md  agent_client.py  mcp_server.py  pyproject.toml
02-data-connector-mcp-done/: README.md  agent_client.py  mcp_server.py  pyproject.toml
03-analyst-workflow/: README.md  analyst_agent.py  pyproject.toml
03-analyst-workflow-done/: README.md  analyst_agent.py  pyproject.toml
04-deal-memo-generator/: README.md  memo_generator.py  pyproject.toml
04-deal-memo-generator-done/: README.md  memo_generator.py  pyproject.toml
05-dealcrafter-assembled/: README.md
05-dealcrafter-assembled/backend/: .env.example  .gitignore  README.md  README_DEEPAGENT.md  README_SERVICES.md  dev_setup.py  pyproject.toml  test_real_ingestion.py  uv_sync.sh
05-dealcrafter-assembled/backend-mcp/: .env.example  ORGANIZATION.md  README.md  explore-fixed-cost.ts  package.json  pnpm-lock.yaml  tsconfig.json
05-dealcrafter-assembled/backend-mcp/docs/: API_TESTING.md  CACHING.md  DOCUMENT_INGESTION.md  IMPLEMENTATION-SUMMARY.md  README-SAP-AI-SDK-INTEGRATION.md  README-WEB-SEARCH.md  README.md  TEST-RESULTS.md  TROUBLESHOOTING.md  WEB-RESEARCH-TOOL.md
05-dealcrafter-assembled/backend-mcp/src/: server.ts
05-dealcrafter-assembled/backend-mcp/src/api/: documentRoutes.ts
05-dealcrafter-assembled/backend-mcp/src/resources/: greetingResource.ts
05-dealcrafter-assembled/backend-mcp/src/services/: documentIngestionService.ts  imageExtractionService.ts  imageStorageService.ts
05-dealcrafter-assembled/backend-mcp/src/tools/: documentTools.ts  stockTool.ts  timeAndPlaceTool.ts  webSearchTool.ts
05-dealcrafter-assembled/backend-mcp/src/utils/: odataClient.ts  toolLogger.ts
05-dealcrafter-assembled/backend-mcp/tests/: find-sonar.ts  list-deployments.ts  test-sap-integration.ts
05-dealcrafter-assembled/backend/app/: main.py
05-dealcrafter-assembled/backend/app/api/: chat.py  chat_history.py
05-dealcrafter-assembled/backend/app/core/: config.py
05-dealcrafter-assembled/backend/app/models/: schemas.py
05-dealcrafter-assembled/backend/app/services/: audio_transcription.py  deepagent_service.py  llm_service.py  service_factory.py  session_storage.py  title_generation.py
05-dealcrafter-assembled/backend/tests/: README.md  run_tests.py  test_api.sh  test_backend.py  test_document_ingestion.py  test_http.py
05-dealcrafter-assembled/backend/tests/audio_tests/: test_call_gemini_hello.py  test_genaihub_gemini_hello.py  test_history_api.py  test_resolve_deployment_url.py
05-dealcrafter-assembled/frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
05-dealcrafter-assembled/frontend/src/: App.tsx
05-dealcrafter-assembled/frontend/src/components/: AppShell.tsx  ChatHistorySidebar.tsx  ChatInput.tsx  ChatMessages.tsx  DocumentManagement.tsx  MessageBubble.tsx  ThemeSelector.tsx
05-dealcrafter-assembled/frontend/src/contexts/: ChatContext.tsx
05-dealcrafter-assembled/frontend/src/services/: api.ts  chatHistory.ts  documents.ts
05-dealcrafter-assembled/frontend/src/types/: index.ts
genai/: README_PERPLEXITY.md  perplexity_sonar.py
