[project]
name = "fiori-ai-chat-backend"
version = "0.1.0"
description = "Backend for Fiori AI Chat Application"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.6",
    "langchain>=0.3.27",
    "langchain-core>=0.3.27",
    "python-dotenv>=1.2.0",
    "sap-ai-sdk-gen>=5.8.3",
    "google-genai>=1.40.0",
    "google-api-core>=2.28.1",
    "google-cloud-aiplatform>=1.126.1",
    "langchain_mcp_adapters>=0.1.12",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "langchain-openai>=0.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "deepagents",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
